docs/apache-airflow-providers-google/15.0.0/_sources/_api/tests/system/google/cloud/dataproc/example_dataproc_cluster_generator/index.rst.txt
tests.system.google.cloud.dataproc.example_dataproc_cluster_generator
=====================================================================

.. py:module:: tests.system.google.cloud.dataproc.example_dataproc_cluster_generator

.. autoapi-nested-parse::

   Example Airflow DAG testing Dataproc
   operators for managing a cluster and submitting jobs.



Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.dataproc.example_dataproc_cluster_generator.ENV_ID
   tests.system.google.cloud.dataproc.example_dataproc_cluster_generator.DAG_ID
   tests.system.google.cloud.dataproc.example_dataproc_cluster_generator.PROJECT_ID
   tests.system.google.cloud.dataproc.example_dataproc_cluster_generator.BUCKET_NAME
   tests.system.google.cloud.dataproc.example_dataproc_cluster_generator.RESOURCE_DATA_BUCKET
   tests.system.google.cloud.dataproc.example_dataproc_cluster_generator.INIT_FILE
   tests.system.google.cloud.dataproc.example_dataproc_cluster_generator.GCS_INIT_FILE
   tests.system.google.cloud.dataproc.example_dataproc_cluster_generator.CLUSTER_NAME_BASE
   tests.system.google.cloud.dataproc.example_dataproc_cluster_generator.CLUSTER_NAME_FULL
   tests.system.google.cloud.dataproc.example_dataproc_cluster_generator.CLUSTER_NAME
   tests.system.google.cloud.dataproc.example_dataproc_cluster_generator.REGION
   tests.system.google.cloud.dataproc.example_dataproc_cluster_generator.ZONE
   tests.system.google.cloud.dataproc.example_dataproc_cluster_generator.CLUSTER_GENERATOR_CONFIG
   tests.system.google.cloud.dataproc.example_dataproc_cluster_generator.create_bucket
   tests.system.google.cloud.dataproc.example_dataproc_cluster_generator.test_run


Module Contents
---------------

.. py:data:: ENV_ID

.. py:data:: DAG_ID
   :value: 'dataproc_cluster_generation'


.. py:data:: PROJECT_ID

.. py:data:: BUCKET_NAME
   :value: 'bucket_dataproc_cluster_generation_Uninferable'


.. py:data:: RESOURCE_DATA_BUCKET
   :value: 'airflow-system-tests-resources'


.. py:data:: INIT_FILE
   :value: 'pip-install.sh'


.. py:data:: GCS_INIT_FILE
   :value: 'gs://airflow-system-tests-resources/dataproc/pip-install.sh'


.. py:data:: CLUSTER_NAME_BASE
   :value: ''


.. py:data:: CLUSTER_NAME_FULL
   :value: ''


.. py:data:: CLUSTER_NAME
   :value: ''


.. py:data:: REGION
   :value: 'us-east4'


.. py:data:: ZONE
   :value: 'us-east4-a'


.. py:data:: CLUSTER_GENERATOR_CONFIG

.. py:data:: create_bucket

.. py:data:: test_run

